--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtfh-frontend",
+  "name": "lbh-microfrontend",
   "version": "1.0.0",
   "private": true,
   "workspaces": {
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LBHackney-IT/mtfh-frontend.git"
+    "url": "https://github.com/LBHackney-IT/lbh-microfrontend.git"
   },
   "dependencies": {
     "@babel/cli": "^7.14.5",
