--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hackney/mtfh-cypress",
+  "name": "@hackney/mfe-cypress",
   "version": "1.2.1",
   "description": "Cypress helpers fpr LBH Modern Tools for Housing",
   "author": "Gareth Cozens <gareth.cozens@amido.com>",
