--- a/packages/generator/src/application/templates/package.json
+++ b/packages/generator/src/application/templates/package.json
@@ -26,7 +26,7 @@
         "@babel/runtime": "^7.15.3",
         "@hackney/eslint-config": "^1.4.0",
         "@hackney/prettier-config": "^1.0.1",
-        "@hackney/mtfh-test-utils": "^1.8.3",
+        "@hackney/mfe-test-utils": "^1.8.3",
         "@hackney/webpack-import-map-plugin": "^1.1.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
@@ -74,7 +74,7 @@
         "webpack-merge": "5.7.3"
     },
     "dependencies": {
-        "@mtfh/common": "https://github.com/LBHackney-IT/mtfh-common.git",
+        "@mfe/common": "https://github.com/LBHackney-IT/mfe-common.git",
         "lbh-frontend": "^3.6.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
