--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hackney/mtfh-system",
+  "name": "@hackney/mfe-system",
   "version": "1.0.2",
   "description": "Design system configuration for LBH Modern Tools for Housing",
   "author": "Gareth Cozens <gareth.cozens@amido.com>",
